# breach-sentinel

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security-scan.yml
docs/: API.md  PRIVACY.md  USAGE.md
examples/: bulk_check_emails.py  check_single_password.py  parse_breach_file.py
src/breach_sentinel/: __init__.py  cli.py  config.py
src/breach_sentinel/core/: __init__.py  email_checker.py  hash_utils.py  password_checker.py
src/breach_sentinel/parsers/: __init__.py  combo_parser.py  stealer_log_parser.py
src/breach_sentinel/reporters/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py
src/breach_sentinel/utils/: __init__.py  logging_config.py  rate_limiter.py
tests/: __init__.py  test_email_checker.py  test_parsers.py  test_password_checker.py
